# speedtest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docker/: Dockerfile
src/: dependencies.py  main.py
src/models/: speedresponse.py
src/repositories/: requester.py
src/routers/: root.py  speed.py
src/services/: get_speed.py
tests/: conftest.py  test_dependencies.py  test_main.py  test_models.py  test_repositories.py  test_routers.py  test_services.py
